--- a/package.json
+++ b/package.json
@@ -27,19 +27,21 @@
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.51.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.8.0",
+    "prisma": "^5.10.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "^5.10.2",
     "@types/uuid": "^9.0.6",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.1",
+    "npm": "^10.4.0",
     "sucrase": "^3.34.0",
     "uuidv4": "^6.2.13"
   }
